--- a/tsconfig.json
+++ b/tsconfig.json
@@ -19,9 +19,18 @@
       }
     ],
     "paths": {
-      "@/*": ["*"]
+      "@/*": [
+        "*"
+      ],
+      "ymaps3": [
+        "./node_modules/@yandex/ymaps3-types"
+      ]
     },
-    "baseUrl": "./src"
+    "baseUrl": "./src",
+    "typeRoots": [
+      "./node_modules/@types",
+      "./node_modules/@yandex/ymaps3-types"
+    ],
   },
   "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx", ".next/types/**/*.ts"],
   "exclude": ["node_modules"]
