--- a/package.json
+++ b/package.json
@@ -11,6 +11,8 @@
   "dependencies": {
     "axios": "^1.7.9",
     "clsx": "^2.1.1",
+    "embla-carousel-autoplay": "^8.5.2",
+    "embla-carousel-react": "^8.5.2",
     "next": "15.1.5",
     "next-auth": "^5.0.0-beta.25",
     "react": "^19.0.0",
