--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "next-auth": "^5.0.0-beta.25",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "react-fast-marquee": "^1.6.5",
     "zod": "^3.24.1",
     "zustand": "^5.0.3"
   },
