--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -2,10 +2,23 @@ version: '3.9'
 
 services:
   frontend:
-    image: shmatozz/rankingapp-frontend:latest
+    build:
+      context: .
+      dockerfile: Dockerfile
+      args:
+        NEXT_PUBLIC_URL: ${NEXT_PUBLIC_URL}
+        NEXT_PUBLIC_YANDEX_API_KEY: ${NEXT_PUBLIC_YANDEX_API_KEY}
+        AUTH_SECRET: ${AUTH_SECRET}
+        AUTH_TRUST_HOST: ${AUTH_TRUST_HOST}
+        NEXT_PUBLIC_BACKEND_URL: ${NEXT_PUBLIC_BACKEND_URL}
     container_name: frontend
-    restart: always
     ports:
       - "3000:3000"
+    restart: always
     environment:
-      - NODE_ENV=production
+      NODE_ENV: production
+      NEXT_PUBLIC_URL: ${NEXT_PUBLIC_URL}
+      NEXT_PUBLIC_YANDEX_API_KEY: ${NEXT_PUBLIC_YANDEX_API_KEY}
+      AUTH_SECRET: ${AUTH_SECRET}
+      AUTH_TRUST_HOST: ${AUTH_TRUST_HOST}
+      NEXT_PUBLIC_BACKEND_URL: ${NEXT_PUBLIC_BACKEND_URL}
