--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
     "lint": "next lint",
     "test": "jest",
     "test:watch": "jest --watch",
-    "test:coverage": "jest --coverage"
+    "test:coverage": "jest --coverage",
+    "cy:open": "cypress open"
   },
   "dependencies": {
     "axios": "1.8.2",
@@ -40,6 +41,7 @@
     "@types/testing-library__jest-dom": "^6.0.0",
     "@yandex/ymaps3-types": "^1.0.16029232",
     "babel-jest": "^29.7.0",
+    "cypress": "^14.3.3",
     "eslint": "^9",
     "eslint-config-next": "15.1.5",
     "jest": "^29.7.0",
